syntax = "proto3";

package teddy.srv.content;

option go_package = "content";

import "github.com/golang/protobuf/ptypes/empty/empty.proto";
import "github.com/golang/protobuf/ptypes/timestamp/timestamp.proto";

service Content {
    rpc GetTags (GetTagReq) returns (GetTagsResp) {}

    rpc PublishInfo (PublishInfoReq) returns (google.protobuf.Empty) {}
    rpc EditInfo (EditInfoReq) returns (google.protobuf.Empty) {}
    rpc GetInfo (InfoOneReq) returns (Info) {}
    rpc GetInfos (GetInfosReq) returns (GetInfosResp) {}
    rpc DeleteInfo (InfoOneReq) returns (google.protobuf.Empty) {}
    rpc WatchInfo (InfoOneReq) returns (google.protobuf.Empty) {}

    rpc GetSegments (GetSegmentsReq) returns (Segments) {}
    rpc GetSegment (SegmentOneReq) returns (Segment) {}
    rpc PublishSegment (PublishSegmentReq) returns (google.protobuf.Empty) {}
    rpc EditSegment (EditSegmentReq) returns (google.protobuf.Empty) {}
    rpc DeleteSegment (SegmentOneReq) returns (google.protobuf.Empty) {}

    rpc PublishContent (InsertContentReq) returns (google.protobuf.Empty) {}
    rpc EditContent (EditContentReq) returns (google.protobuf.Empty) {}
    rpc DeleteContent (ContentOneReq) returns (google.protobuf.Empty) {}

    rpc ThumbUp (InfoOneReq) returns (google.protobuf.Empty) {}
    rpc DeleteThumbUp (InfoOneReq) returns (google.protobuf.Empty) {}
    rpc GetUserThumbUp (UIDPageReq) returns (InfoIDsResp) {}
    rpc GetInfoThumbUp (InfoIDPageReq) returns (UserIDsResp) {}

    rpc ThumbDown (InfoOneReq) returns (google.protobuf.Empty) {}
    rpc DeleteThumbDown (InfoOneReq) returns (google.protobuf.Empty) {}
    rpc GetUserThumbDown (UIDPageReq) returns (InfoIDsResp) {}
    rpc GetInfoThumbDown (InfoIDPageReq) returns (UserIDsResp) {}

    rpc Favorite (InfoOneReq) returns (google.protobuf.Empty) {}
    rpc DeleteFavorite (InfoOneReq) returns (google.protobuf.Empty) {}
    rpc GetUserFavorite (UIDPageReq) returns (InfoIDsResp) {}
    rpc GetInfoFavorite (InfoIDPageReq) returns (UserIDsResp) {}
}

message Sort {
    string name = 1;
    bool asc = 2;
}

message Tag {
    string tag = 1;
    string type = 2;
    uint64 usage = 3;
    google.protobuf.Timestamp createTime = 4;
    google.protobuf.Timestamp lastUseTime = 5;
}

message TagAndType {
    string tag = 1;
    string type = 2;
}

message Info {
    string infoID = 1;
    string uid = 2;
    string author = 3;
    string title = 4;
    string summary = 5;
    string country = 6;
    google.protobuf.Timestamp contentTime = 7;
    map<string, string> coverResources = 8;
    google.protobuf.Timestamp publishTime = 9;
    google.protobuf.Timestamp lastReviewTime = 10;
    uint64 watchCount = 11;
    repeated TagAndType tags = 12;
    uint64 thumbUps = 13;
    bool isThumbUp = 14;
    repeated string thumbUpList = 15;
    uint64 thumbDowns = 16;
    bool isThumbDown = 17;
    repeated string thumbDownList = 18;
    uint64 favorites = 19;
    bool isFavorite = 20;
    repeated string favoriteList = 21;
    google.protobuf.Timestamp lastModifyTime = 22;
    bool canReview = 23;
    bool valid = 24;
    bool archived = 25;
    string LatestSegmentID = 26;
    uint64 SegmentCount = 27;
}

message Segment {
    string id = 1;
    string infoID = 2;
    int64 no = 3;
    string title = 4;
    repeated string labels = 5;
    map<string, string> content = 6;
}

message GetTagReq {
    uint32 page = 1;
    uint32 size = 2;
    string type = 3;
    repeated Sort sorts = 4;
}

message UIDPageReq {
    uint32 page = 1;
    uint32 size = 2;
    repeated Sort sorts = 3;
    string uid = 4;
}

message GetTagsResp {
    uint64 totalCount = 1;
    repeated Tag tags = 2;
}

message PublishInfoReq {
    string uid = 1;
    string author = 2;
    string title = 3;
    string summary = 4;
    string country = 5;
    repeated TagAndType tags = 6;
    map<string, string> coverResources = 7;
    bool canReview = 8;
}

message EditInfoReq {
    string infoID = 1;
    string author = 2;
    string title = 3;
    string summary = 4;
    string country = 5;
    repeated TagAndType tags = 6;
    map<string, string> coverResources = 7;
    bool canReview = 8;
}

message GetSegmentsReq {
    uint32 page = 1;
    uint32 size = 2;
    string infoID = 3;
    repeated string labels = 4;
    repeated Sort sorts = 5;
}

message Segments {
    uint64 totalCount = 1;
    repeated Segment segments = 2;
}

message PublishSegmentReq {
    string infoID = 1;
    int64 no = 2;
    string title = 3;
    repeated string labels = 4;
    map<string, string> content = 5;
}

message EditSegmentReq {
    string infoID = 1;
    string segID = 2;
    int64 no = 3;
    string title = 4;
    repeated string labels = 5;
    map<string, string> content = 6;
}

message SegmentOneReq {
    string infoID = 1;
    string segID = 2;
}

message InsertContentReq {
    string infoID = 1;
    string segID = 3;
    google.protobuf.Timestamp time = 4;
    string value = 5;
}

message EditContentReq {
    string infoID = 1;
    string segID = 3;
    string contID = 4;
    google.protobuf.Timestamp time = 5;
    string value = 6;
}

message ContentOneReq {
    string infoID = 1;
    string segID = 3;
    string contID = 4;
}

message GetInfosReq {
    uint32 page = 1;
    uint32 size = 2;
    repeated Sort sorts = 3;
    string title = 4;
    repeated TagAndType tags = 5;
}

message GetInfosResp {
    uint64 totalCount = 1;
    repeated Info infos = 2;
}

message InfoOneReq {
    string infoID = 1;
}

message InfoIDPageReq {
    string infoID = 1;
    uint32 page = 2;
    uint32 size = 3;
    repeated Sort sorts = 4;
}

message UIDWithTime {
    string uid = 1;
    google.protobuf.Timestamp time = 2;
}

message UserIDsResp {
    repeated UIDWithTime items = 1;
}

message InfoIDWithTime {
    string infoId = 1;
    google.protobuf.Timestamp time = 2;
}

message InfoIDsResp {
    repeated InfoIDWithTime items = 1;
}